# nanogpt

./: .gitignore  README.md  pyproject.toml
src/nanogpt/: bigram.py  dataset.py  input.py  main.py  scheduler.py  token.py  train.py  visualization.py
src/nanogpt/models/: __init__.py  bigram.py  config.py  gpt.py  mlp.py  transformer.py  wavenet.py
src/nanogpt/tokenizer/: shakespeare35k.model  shakespeare35k.vocab
