[project]
name = "nanogpt"
version = "0.1.0"
readme = "README.md"
description = "A very tiny GPT prototype implementation in Python."
# license = {file = "LICENSE.txt"}
requires-python = ">=3.9"
dependencies = [
    "matplotlib >= 3.2.0",
    "numpy >= 1.21.0",
    "sentencepiece >= 0.2.0",
    "tiktoken >= 0.9.0",
    "torch >= 2.6.0",
    "transformers >= 0.21.1"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[project.optional-dependencies]
test = [
    "pytest >=2.7.3",
]

[project.scripts]
nanogpt = "nanogpt.main:main"
nanogpt-token = "nanogpt.main:train_tokenizer"
